Updated Java version to 21 and changed thread handling to virtual threads.